--- a/proxy/templates/videoPage.html
+++ b/proxy/templates/videoPage.html
@@ -246,7 +246,7 @@
                     type: "GET",
                     dataType: "json",
                     success: function(data) {
-                        info = data["QA"][0]
+                        info = data["QA"]
                         console.log("cabeçalho")
                         console.log(question_id);
                         console.log(data)
